IZPACK-371
git-svn-id: https://svn.codehaus.org/izpack/izpack-src/branches/4.3@2765 7d736ef5-cfd4-0310-9c9a-b52d5c14b761