@@ -32,8 +32,10 @@ import java.net.URL;
 import java.text.CharacterIterator;
 import java.text.SimpleDateFormat;
 import java.text.StringCharacterIterator;
+import java.util.ArrayList;
 import java.util.Date;
 import java.util.Enumeration;
+import java.util.List;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 import java.util.zip.ZipEntry;
@@ -148,6 +150,8 @@ public class SelfModifier
      * System property name of phase (1, 2, or 3) indicator.
      */
     public static final String PHASE_KEY = "self.mod.phase";
+    
+    public static final String MEMORY_KEY = "self.memory";
 
     /**
      * Base prefix name for sandbox and log, used only in phase 1.
@@ -261,6 +265,9 @@ public class SelfModifier
         jarFile = new File(System.getProperty(JAR_KEY));
         logFile = new File(System.getProperty(BASE_KEY) + ".log");
         sandbox = new File(System.getProperty(BASE_KEY) + ".d");
+        
+        this.maxmemory = Long.parseLong(System.getProperty(MEMORY_KEY, "64"));
+        this.maxpermgensize = this.maxmemory / 4;
 
         // retrieve refrence to target method
         try
@@ -431,7 +438,7 @@ public class SelfModifier
         {
             args = new String[0];
         }
-        spawn(args, 2);
+        spawn(args, 2);        
 
         // finally, if all went well, the invoking process must exit
         log("Exit");
@@ -450,39 +457,41 @@ public class SelfModifier
 
         // invoke from tmpdir, passing target method arguments as args, and
         // SelfModifier parameters as sustem properties
-        String javaCommand = "\"" + javaCommand() + "\"";
-        if (this.useMemorySettings){
-            javaCommand += " -Xmx" + this.maxmemory + "m -XX:MaxPermSize=" + maxpermgensize + "m"; 
-        }
+        String javaCommand = javaCommand();
         
-        String[] javaCmd = new String[]{javaCommand, "-classpath", "\"" + sandbox.getAbsolutePath() + "\"",
-                "-D" + BASE_KEY + "=" + base, "-D" + JAR_KEY + "=\"" + jarFile.getPath() + "\"",
-                "-D" + CLASS_KEY + "=" + method.getDeclaringClass().getName(),
-                "-D" + METHOD_KEY + "=" + method.getName(), "-D" + PHASE_KEY + "=" + nextPhase,
-                getClass().getName()};
-
-        String[] entireCmd = new String[javaCmd.length + args.length];
-        System.arraycopy(javaCmd, 0, entireCmd, 0, javaCmd.length);
-        System.arraycopy(args, 0, entireCmd, javaCmd.length, args.length);
+        List<String> command = new ArrayList<String>();
+        command.add(javaCommand);
+        command.add("-Xmx" + this.maxmemory + "m");
+        command.add("-XX:MaxPermSize=" + maxpermgensize + "m");
+// activate for debugging purposes.        
+//        command.add("-Xdebug");        
+//        int debugPort = 8000;        
+//        command.add("-Xrunjdwp:transport=dt_socket,address=" + debugPort + ",server=y,suspend=y");
+        command.add("-classpath");
+        command.add(sandbox.getAbsolutePath());
+        command.add("-D" + BASE_KEY + "=" + base);
+        command.add("-D" + JAR_KEY + "=\"" + jarFile.getPath() + "\"");
+        command.add("-D" + CLASS_KEY + "=" + method.getDeclaringClass().getName());
+        command.add("-D" + METHOD_KEY + "=" + method.getName());
+        command.add("-D" + PHASE_KEY + "=" + nextPhase);
+        command.add("-D" + MEMORY_KEY + "=" + this.maxmemory);
+        command.add(getClass().getName());
+        
+        for(String arg : args){
+            command.add(arg);
+        }        
 
         StringBuffer sb = new StringBuffer("Spawning phase ");
         sb.append(nextPhase).append(": ");
-        for (String anEntireCmd : entireCmd)
+        for (String anEntireCmd : command)
         {
             sb.append("\n\t").append(anEntireCmd);
         }
         log(sb.toString());
 
-        // Just invoke it and let it go, the exception will be caught above
-        // Won't compile on < jdk1.3, but will run on jre1.2
-        if (JAVA_SPECIFICATION_VERSION < 1.3)
-        {
-            return Runtime.getRuntime().exec(entireCmd, null);
-        }
-        else
-        {
-            return Runtime.getRuntime().exec(entireCmd, null, null); // workDir);
-        }
+        ProcessBuilder process = new ProcessBuilder(command);
+        process.redirectErrorStream(true);
+        return process.start();
     }
 
     /**
@@ -643,6 +652,8 @@ public class SelfModifier
             {
             }
 
+            
+            
             // spawn phase 3, capture its stdio and wait for it to exit
             Process p = spawn(args, 3);
 
